fix(root): robust su exec + prepareUsbNode (chown+SELinux+diagnostics logging)